--- a/project_14_final/SQL_project/Projeto_SQL.ipynb
+++ b/project_14_final/SQL_project/Projeto_SQL.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
    ],
    "source": [
     "query = ''' SELECT COUNT(book_id) AS book_id_cnt, COUNT(DISTINCT book_id) AS book_id_unique_cnt\n",
-    "            FROM books\n",
+    "            FROM books \n",
     "            WHERE publication_date > '2000-01-01'\n",
     "        '''\n",
     "\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -383,10 +383,10 @@
     }
    ],
    "source": [
-    "query = ''' SELECT books.book_id, books.title, COUNT(ratings.rating) AS rating_cnt, AVG(ratings.rating) AS rating_avg\n",
-    "            FROM books\n",
-    "            INNER JOIN ratings ON ratings.book_id = books.book_id\n",
-    "            GROUP BY books.book_id\n",
+    "query = ''' SELECT b.book_id, b.title, COUNT(r.rating) AS rating_cnt, AVG(r.rating) AS rating_avg\n",
+    "            FROM books AS b\n",
+    "            INNER JOIN ratings AS r ON r.book_id = b.book_id\n",
+    "            GROUP BY b.book_id\n",
     "            ORDER BY rating_cnt DESC;\n",
     "        '''\n",
     "        \n",
@@ -404,37 +404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     publisher_id                     publisher  books_cnt\n",
-      "0             212                 Penguin Books         42\n",
-      "1             309                       Vintage         31\n",
-      "2             116      Grand Central Publishing         25\n",
-      "3             217              Penguin Classics         24\n",
-      "4              33              Ballantine Books         19\n",
-      "..            ...                           ...        ...\n",
-      "329            34         Ballantine Books (NY)          1\n",
-      "330           225                 Plaza y Janés          1\n",
-      "331           138       HarperCollinsPublishers          1\n",
-      "332           245  Random House: Modern Library          1\n",
-      "333           205                 Pan Childrens          1\n",
-      "\n",
-      "[334 rows x 3 columns]\n"
+      "   publisher_id                 publisher  books_cnt\n",
+      "0           212             Penguin Books         42\n",
+      "1           309                   Vintage         31\n",
+      "2           116  Grand Central Publishing         25\n",
+      "3           217          Penguin Classics         24\n",
+      "4            35                    Bantam         19\n"
      ]
     }
    ],
    "source": [
-    "query = ''' SELECT publishers.publisher_id , publishers.publisher, COUNT(books.book_id) AS books_cnt\n",
-    "            FROM publishers\n",
-    "            INNER JOIN books ON books.publisher_id = publishers.publisher_id\n",
-    "            WHERE books.num_pages > 50\n",
-    "            GROUP BY publishers.publisher_id\n",
+    "query = ''' SELECT p.publisher_id , p.publisher, COUNT(b.book_id) AS books_cnt\n",
+    "            FROM publishers AS p\n",
+    "            INNER JOIN books AS b ON b.publisher_id = p.publisher_id\n",
+    "            WHERE b.num_pages > 50\n",
+    "            GROUP BY p.publisher_id\n",
     "            ORDER BY books_cnt DESC\n",
+    "            LIMIT 5\n",
     "        '''\n",
     "        \n",
     "task_3 = pd.io.sql.read_sql(query, con = engine)\n",
@@ -458,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -475,9 +468,9 @@
     }
    ],
    "source": [
-    "#firs: first find avg rating and rating count per book to filter\n",
-    "#second: merging tables books with authors and books with ratings filtered \n",
-    "#third: average rating of the books per author\n",
+    "#firs: first find rating avg and rating count per book to filter books with at least 50 ratings \n",
+    "#second: merging tables: books with authors and books with ratings filtered, table info still per book \n",
+    "#third: average rating of all books per author\n",
     "query = ''' \n",
     "WITH rating_ AS (\n",
     "    SELECT book_id, COUNT(rating) AS rating_cnt, AVG(rating) AS rating_avg\n",
@@ -485,10 +478,10 @@
     "    GROUP BY book_id\n",
     "    HAVING COUNT(rating) > 50\n",
     "    ), books_authors_ratings AS (\n",
-    "        SELECT books.book_id AS book_id, authors.author_id AS author_id, authors.author AS author, rating_cnt, rating_avg\n",
-    "        FROM books\n",
-    "        INNER JOIN authors ON authors.author_id = books.author_id\n",
-    "        INNER JOIN rating_ ON rating_.book_id = books.book_id)\n",
+    "        SELECT b.book_id, a.author_id, a.author, rating_cnt, rating_avg\n",
+    "        FROM books AS b\n",
+    "        INNER JOIN authors AS a ON a.author_id = b.author_id\n",
+    "        INNER JOIN rating_ AS r ON r.book_id = b.book_id)\n",
     "\n",
     "SELECT author_id, author, AVG(rating_avg) AS author_rating\n",
     "FROM books_authors_ratings\n",
@@ -525,22 +518,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   avg_n_ratings\n",
-      "0      54.333333\n"
+      "   avg_review\n",
+      "0   24.333333\n"
      ]
     }
    ],
    "source": [
-    "query = ''' \n",
-    "WITH users_50 AS (\n",
-    "SELECT username, COUNT(rating_id) AS rating_cnt \n",
-    "FROM ratings \n",
-    "GROUP BY username\n",
-    "HAVING COUNT(rating_id) > 50\n",
-    ")\n",
+    "#first filter user with more than 50 ratings\n",
+    "#second count reviews of each user and inner join with filtered rating table through username to filter only user with 50+ ratings \n",
+    "#third AVG of the final table \n",
     "\n",
-    "SELECT AVG(rating_cnt) AS avg_n_ratings\n",
-    "FROM users_\n",
+    "query = ''' \n",
+    "        WITH users_50_ratings AS (\n",
+    "        SELECT username, COUNT(rating_id) AS rating_cnt \n",
+    "        FROM ratings \n",
+    "        GROUP BY username\n",
+    "        HAVING COUNT(rating_id) > 50\n",
+    "        ), count_reviews AS(\n",
+    "                SELECT r.username, COUNT(r.review_id) AS review_cnt \n",
+    "                FROM reviews AS r\n",
+    "                INNER JOIN users_50_ratings AS u ON u.username = r.username\n",
+    "                GROUP BY r.username\n",
+    "        )\n",
+    "\n",
+    "SELECT AVG(review_cnt) AS avg_review \n",
+    "FROM count_reviews;\n",
     "        '''\n",
     "        \n",
     "task_5 = pd.io.sql.read_sql(query, con = engine)\n",
@@ -552,13 +554,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dos usuários que classificaram mais do que 50 livros, o número médio de avaliações são 54 livros "
+    "Dos usuários que classificaram mais do que 50 livros, o número médio de avaliações é 24"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -572,7 +574,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.19"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
